fix overflowing channel panel in mobile

--- a/src/app/channels/channels-panel/channels-panel.component.scss
+++ b/src/app/channels/channels-panel/channels-panel.component.scss
@@ -1,6 +1,6 @@
 @import 'styles/mixins';
 
-.panel-wrap {
+:host {
   background-color: #fff;
   display: flex;
   flex-direction: column;
